serverless-app/resources/vpc-private.yml
Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-vpc
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ${self:custom.region}a
      CidrBlock: 10.0.1.0/24
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-private-1a
      VpcId:
        Ref: Vpc
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ${self:custom.region}b
      CidrBlock: 10.0.2.0/24
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-private-1b
      VpcId:
        Ref: Vpc
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ${self:custom.region}a
      CidrBlock: 10.0.21.0/24
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-public-1a
      VpcId:
        Ref: Vpc
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ${self:custom.region}b
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-public-1b
      CidrBlock: 10.0.22.0/24
      VpcId:
        Ref: Vpc
  Eip1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-eip-1
  Eip2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-eip-2
      
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-natgw-1
      AllocationId:
        Fn::GetAtt:
        - Eip1
        - AllocationId
      SubnetId:
        Ref: PublicSubnet1
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-natgw-2
      AllocationId:
        Fn::GetAtt:
        - Eip2
        - AllocationId
      SubnetId:
        Ref: PublicSubnet2
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-private-rt1
      VpcId:
        Ref: Vpc
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-private-rt2
      VpcId:
        Ref: Vpc
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway1
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NatGateway2
  SubnetRouteTableAssociationPrivate1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet1
      RouteTableId:
        Ref: PrivateRouteTable1
  SubnetRouteTableAssociationPrivate2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PrivateSubnet2
      RouteTableId:
        Ref: PrivateRouteTable2
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-igw
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: Vpc
      InternetGatewayId:
        Ref: InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
      - Key: Name
        Value: ${self:service}-${self:provider.stage}-public-rt
      VpcId:
        Ref: Vpc
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
  SubnetRouteTableAssociationPublic1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet1
      RouteTableId:
        Ref: PublicRouteTable
  SubnetRouteTableAssociationPublic2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet2
      RouteTableId:
        Ref: PublicRouteTable
